# KernForge

./: .gitignore  GAP_ANALYSIS.md  README.md  deploy.sh  pyproject.toml  yaml.py
config/: config_deep.yaml  config_dsa_paged.yaml  config_gdn.yaml  config_moe.yaml  config_smoke_test.yaml  tasks_all.txt  tasks_dsa.txt
docs/: competitive_edge.md
examples/: dry_run_test.py  evolve_gdn_decode.py
kernforge/: __init__.py  cli.py  evolve.py  main.py  submit.py
kernforge/agent/: corpus.py  domain_knowledge.py  generator.py  hybrid_agent.py  ladder.py  patterns.py  prompts.py  tournament_selection.py
kernforge/eval/: adversarial.py  agents_integration.py  evaluator.py  flashinfer_eval.py  isa_analyzer.py  modal_eval.py  ncu.py  profiling.py  static_analysis.py  tournament.py  triton_profiling.py
kernforge/kernel/: hardware.py  solution.py  spec.py
kernforge/prompt/: __init__.py  proposer_prompt.py  tuner_prompt.py
kernforge/templates/: gdn_decode_qk16_v32_d128_k_last.json
kernforge/tests/: dry_run.py
outputs/kernforge_iterative_mlsys26-contest_25_20260219-221834/: config.yaml
outputs/kernforge_iterative_mlsys26-contest_25_20260219-225517/: config.yaml
outputs/kernforge_iterative_mlsys26-contest_25_20260221-115548/: config.yaml
outputs/kernforge_iterative_mlsys26-contest_25_20260221-160651/: config.yaml
outputs/kernforge_iterative_mlsys26-contest_25_20260223-165127/: config.yaml
outputs/kernforge_iterative_mlsys26-contest_25_20260225-141806/: config.yaml
outputs/kernforge_iterative_mlsys26-contest_25_20260225-235052/: config.yaml
tests/: test_e2e.py
(+172 files in other folders)
